# PowerGridReconfig

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: edge-mask-trigger.txt
commands/: single_thread
configs/: gridfm_case118.yaml  self_play_loop.yaml  self_play_loop_pilot.yaml  self_play_loop_smoke.yaml
constraints/: py311.txt
docs/: self_play.md
grid_topology_ai/: action_space.py  config.py  contracts.py  data_adapter.py  environment.py  grid_utility.py  gridfm_action_space.py  gridfm_adapter.py  gridfm_pypower_backend.py  gridfm_reward.py  gridfm_transition_generator.py  metrics.py  outcome.py  physical_constraints.py  physical_objective.py  power_flow_errors.py  power_flow_state_builder.py  pypower_backend.py  return_contract.py  reward.py  scenario_generator.py  security.py  state_store.py  termination.py  transition_generator.py  value_targets.py
notebooks/: topology_switching_visualization_integrate_gridfm_datakit.ipynb  topology_switching_visualization_integrate_gridfm_datakit_v2.ipynb
scripts/: analyze_gridfm_scenarios.py  analyze_mcts_root_branches.py  analyze_transitions.py  build_policy_targets.py  check_action_space.py  check_data_adapter.py  check_environment.py  check_fast_state_builder.py  check_fast_state_sequence.py  check_gridfm_action_space.py  check_gridfm_adapter.py  check_gridfm_perturbations.py  check_gridfm_pypower_backend.py  check_gridfm_reward.py  check_network.py  check_npz_state.py  check_pypower_backend.py  evaluate_checkpoint.py  export_states.py  generate_gridfm_transitions.py  generate_self_play_data.py  (+6 more)
(+201 files in other folders)
