[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-grid-reconfig"
version = "0.1.0"
description = "Research framework for power-grid topology control and self-play."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26.4,<2.0",
    "scipy>=1.13.1,<1.14",
    "pandas>=2.2.3,<2.3",
    "networkx>=3.3,<4",
    "tqdm>=4.67,<5",
    "PyYAML>=6.0.2,<7",
    "torch>=2.5.1,<3",
    "PYPOWER==5.1.19",
]

[project.optional-dependencies]
train = [
    "tensorboard>=2.18,<3",
]
data = [
    "pandapower==2.14.11",
    "numba>=0.60,<0.61",
    "pyarrow>=18.1,<19",
]
test = [
    "pytest>=8.3,<9",
    "build>=1.2,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["grid_topology_ai*"]
exclude = [
    "tests*",
    "scripts*",
    "data*",
    "notebooks*",
    "commands*",
    "runs*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
